BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/BMS_Global_Trigger_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To control the trigger&apos;s firing for different user profiles</description>
    <fields>
        <fullName>BMS_CN_CALL2_AFTER_INSUPD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To conrol the firing of the cn trigger on call</description>
        <label>BMS CN CALL2 AFTER INSUPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMS_MSL_Thought_Leader_Evaluation__c</fullName>
        <description>CORE

JW 2013.06.11 - This is for the MSL TL Evaluation calculation. Should be &apos;NA&apos; for US, &apos;IC&apos; for CA.</description>
        <label>BMS_MSL_Thought_Leader_Evaluation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>BMS Global Trigger Setting</label>
</CustomObject>